<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewEmailUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextEmailUser"
        android:layout_centerHorizontal="true"
        android:text="@string/signup_email" />

    <TextView
        android:id="@+id/textViewPasswordUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextPasswordUser"
        android:layout_centerHorizontal="true"
        android:text="@string/signup_password" />

    <EditText
        android:id="@+id/editTextPasswordUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="49dp"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editTextEmailUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_above="@+id/editTextPasswordUser"
        android:layout_alignLeft="@+id/editTextPasswordUser"
        android:layout_alignStart="@+id/editTextPasswordUser"
        android:layout_marginBottom="45dp" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewSignin"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="75dp"
        android:elevation="15dp"
        android:padding="10dp"
        android:text="@string/sign"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/textViewSignin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="Retour"
        android:textAlignment="center" />


</RelativeLayout>